[package]
name = "cosmos-rust-package"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
version = "0.1.0"
edition = "2021"

[dependencies]
cosmrs = {workspace = true,  features = ["cosmwasm"] }
cosmos-sdk-proto = { workspace = true, features = ["grpc-transport", "cosmwasm"] }
osmosis-proto = { workspace = true, features = ["grpc-transport", "osmosis"], optional = true }
chrono.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rust_decimal.workspace = true
reqwest.workspace = true
hex.workspace = true
log.workspace = true
strum.workspace = true
strum_macros.workspace = true
regex.workspace = true
base64.workspace = true
secp256k1 = { workspace = true, default-features = false }
chain-registry = "0.1.0"
prost = "0.11"
prost-types = "0.11"
tonic = { version = "0.8.1", features = ["transport","tls"] }
bitcoin = "0.27.1"
hkd32 = { version = "0.7.0", features = ["bip39", "mnemonic", "bech32"] }
ed25519-dalek = { version = "1", features = ["serde"] }
rust-crypto = "^0.2"
rand_core = { version = "0.6.4", default-features = false }
thiserror = { version = "1.0.21" }
eyre = "0.6"
lazy_static = { workspace = true}
linkify = { workspace = true}

[features]
default = ["cosmos","osmosis"]
cosmos = []
osmosis = ["osmosis-proto"]
