[package]
name = "cosmos-rust-package"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
version = "0.3.0"
edition = "2021"

[dependencies]
cosmrs = {git = "https://github.com/cosmos/cosmos-rust.git",  features = ["cosmwasm"] }
cosmos-sdk-proto = { version = "0.19.0", features = ["grpc-transport", "cosmwasm"] }
tonic = { version = "0.9.2", features = ["transport","tls","tls-roots","tls-webpki-roots"] }

osmosis-std = { version = "0.15.0", optional = true }
chrono = "^0.4"
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.12.2"
reqwest = "0.11.6"
hex = "0.4.3"
log = "0.4.14"
strum = "0.25.0"
strum_macros = "0.25.1"
regex.workspace  = "1.6.0"
base64 = "0.21.2"
secp256k1 = { version = "0.27.0", default-features = false, features = ["alloc"] }
chain-registry = "0.1.0"
prost-types = "^0.11"
bitcoin = { version = "0.30.0", features = ["serde"] }
hkd32 = { version = "0.7.0", features = ["bip39", "mnemonic", "bech32"] }
ed25519-dalek = { version = "1", features = ["serde"] }
rust-crypto = "^0.2"
rand_core = { version = "0.6.4", default-features = false }
rand = "0.8.5"
thiserror = { version = "1.0.21" }
eyre = "0.6"
lazy_static = { version = "1.4.0"}
num-format = "0.4.4"

[features]
default = ["cosmos","osmosis"]
cosmos = []
osmosis = ["osmosis-std"]
